--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-*.pyc
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
 venv/
+env/
+
+# Environment variables file
+.env
